--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "type": "module",
   "dependencies": {
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
+    "@sveltejs/adapter-vercel": "^1.0.0-next.27",
     "debounce": "^1.2.1",
     "svelte-fa": "^2.2.1"
   }
