--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 		"@fortawesome/free-solid-svg-icons": "^5.15.4",
 		"@sveltejs/adapter-vercel": "^1.0.0-next.27",
 		"debounce": "^1.2.1",
+		"logbit": "^1.3.1",
 		"svelte-fa": "^2.2.1"
 	}
 }
