--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 		"@sveltejs/adapter-vercel": "^1.0.0-next.27",
 		"debounce": "^1.2.1",
 		"logbit": "^1.3.2",
+		"moo": "^0.5.1",
 		"svelte-fa": "^2.2.1"
 	}
 }
